...
                <ImageView
                    android:id="@+id/iv_icon_name"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/ICONO_NOMBRE_INVESTIGADOR"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="@+id/il_researcher_name"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toTopOf="@+id/il_researcher_name"
                    app:srcCompat="@drawable/ic_person_black_24dp"
                    app:tint="@color/colorSecondaryVariant" />

                <com.google.android.material.textfield.TextInputLayout
...
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toEndOf="@+id/iv_icon_name"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_researcher_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:inputType="textCapWords"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_researcher_last_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/APELLIDO"
...
                    app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toEndOf="@+id/iv_icon_name"
                    app:layout_constraintTop_toBottomOf="@+id/il_researcher_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_researcher_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:inputType="textCapWords"
                        android:singleLine="true" />

...
