...
    <!-- NOTIFICACION -->
    <string name="TEMA_NOTIFICACION_REGISTRO" translatable="false">RegistroInvestigador</string>
    <string name="CANAL_NOMBRE">Activations alert</string>
    <string name="CANAL_DESCRIPCION">Registration alerts for new researchers</string>

    <!-- Titulos Toolbar -->
    <string name="TITULO_TOOLBAR_PERFIL">Profile</string>
    <string name="TITULO_TOOLBAR_REGISTRO">Register</string>
    <string name="TITULO_TOOLBAR_NUEVO_ENTREVISTADO">New Interviewee</string>
    <string name="TITULO_TOOLBAR_EDITAR_ENTREVISTADO">Edit Interviewee</string>
    <string name="TITULO_TOOLBAR_NUEVA_ENTREVISTA">New Interview</string>
    <string name="TITULO_TOOLBAR_EDITAR_ENTREVISTA">Edit Interview</string>
    <string name="TITULO_TOOLBAR_CREAR_EVENTO">New event</string>
...
    <string name="MSG_INVEST_REGISTRADO">You have registered!</string>
    <string name="VALIDACION_CAMPO_REQUERIDO">Required field</string>
    <string name="VALIDACION_CAMPO_REQUERIDO_CERO">It can\'t be zero</string>
    <string name="VALIDACION_EMAIL">Invalid email</string>
    <string name="VALIDACION_PASSWORD_LARGO">Password must have 8 characters minimum</string>
    <string name="VALIDACION_PASSWORD_NO_IGUALES">Passwords don\'t match</string>
    <string name="PERFIL_ACTIVADO">Activated</string>
    <string name="PERFIL_NO_ACTIVADO">Unactivated</string>
    <string name="TAG_TOKEN_LOGIN" translatable="false">TOKEN_LOGIN</string>
    <string name="TAG_VM_INVES_REGISTRO" translatable="false">VM_INVES_REGISTRO </string>
    <string name="VIEW_MODEL_MSG_RESPONSE" translatable="false">MSG_RESPONSE:</string>
    <string name="VIEW_MODEL_MSG_RESPONSE_ERROR" translatable="false">MSG_ERROR:</string>
    <string name="MSG_INVEST_LOGIN">Welcome!</string>
...
    <string name="MENU_CERRAR_SESION">Log out</string>
    <string name="MENU_GENERAL">General</string>
    <string name="MENU_MI_PERFIL">My profile</string>
    <string name="MENU_LISTA_ENTREVISTADOS">Interviewees</string>
    <string name="MENU_ESTADISTICAS">Statistics</string>
    <string name="MENU_CONFIGURACION">Configuration</string>
    <string name="MENU_GUARDAR_DATOS">Save</string>
    <string name="MENU_ENTREVISTA_VER_EVENTO">Show events</string>
    <string name="MENU_ENTREVISTA_EDITAR">Edit interview</string>
    <string name="MENU_ENTREVISTA_ELIMINAR">Delete interview</string>
    <string name="MENU_PERFIL_EDITAR">Edit profile</string>
    <string name="MENU_CONDICIONES">Conditions and privacy</string>
    <string name="MENU_CONTACTENOS">Contact us</string>
    <string name="MENU_ADMIN">Admin</string>
    <string name="MENU_ACCIONES">Actions</string>
    <string name="MENU_EMOTICONES">Emoticons</string>
    <string name="MENU_INVESTIGADORES">Researchers</string>
...
